--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,6 @@ jobs:
 
       - name: Run unittest tests with coverage
         run: |
-          pytest --cov=autogpt_plugins --cov-report term-missing --cov-branch --cov-report xml --cov-report term
+          pytest --cov=serpapi --cov-report term-missing --cov-branch --cov-report xml --cov-report term
         env:
           CI: true
